--- a/dashboard/templates/jenkins.html
+++ b/dashboard/templates/jenkins.html
@@ -18,17 +18,19 @@
                         </tr>
                     </thead>
                     <tbody>
+                        {% for job in jobs %}
                         <tr>
-                            <td>==NOME DO JOB==</td>
+                            <td>{{ job.name }}</td>
                             <td>
-                                <img src="==IMAGEM DE ESTADO DO JENKINS==" alt="Icon">
+                                {{ job.color }}
                             </td>
-                            <td>==STATUS DO ULTIMO BUILD==</td>
+                            <td>USAR depois</td>
                             <td>
-                                <a href="/jenkins/build/==NOME DO JOB==" class="glyphicon glyphicon-repeat"></a>
-                                <a href="/jenkins/update/==NOME DO JOB==" class="glyphicon glyphicon-pencil"></a>
+                                <a href="/jenkins/build/{{ job.name }}" class="glyphicon glyphicon-repeat"></a>
+                                <a href="/jenkins/update/{{ job.name }}" class="glyphicon glyphicon-pencil"></a>
                             </td>
                         </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
